--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
 langchain==0.0.154
 PyPDF2==3.0.1
 python-dotenv==1.0.0
-streamlit==1.28.0
+streamlit
+
+transformers
+requests
 faiss-cpu==1.7.4
-streamlit-extras==0.3.4
+streamlit-extras
 langchain==0.0.154
+
 PyPDF2==3.0.1
 python-dotenv==1.0.0
 altair==4.1.0
 openai==0.28.1
 tiktoken
+
+
+
+
 
 
 
